# nicola_blog

./: .gitignore  .mkdocsignore  Gemfile  README.md  _config.yml  index.html  lower_case.sh  mkdocs.yml  pyproject.toml
_guides/: 2014-03-10-develop-and-test-chef-cookbooks.markdown  2014-03-15-opsworks-introduction.markdown  2014-03-15-packer_and_vagrant.markdown  2014-03-16-aws.markdown  2014-03-16-chef.markdown  2014-03-27-heroku-buildpack.markdown  alpine.markdown  aws-opsworks-introduction.markdown  aws.markdown  azure.markdown  bash.markdown  bigdata.markdown  bower.markdown  broccoli.markdown  c-sharp_wp8_w8.markdown  chef-cookbooks-develop-and-test.markdown  chef.markdown  continous_integration.markdown  docker.markdown  docker_core_os.markdown  docker_fleet.markdown  docker_panamax.markdown  elixir.adoc  elixir.markdown  elixir_webdev.adoc  embedded_distro.markdown  ember_cli.markdown  emberjs.markdown  enerlife.markdown  expressjs.markdown  google_doc.markdown  heroku.markdown  html_css.markdown  html_less.markdown  html_middleman.markdown  influxdb.markdown  javascript.markdown  jira.markdown  languages_analogies_and_differences.markdown  linux.markdown  (+35 more)
_guides/aws/: alb.plantuml
_guides/bash_examples/: function_local_vars_2.sh  param_parsing.sh  var2.sh
_guides/code_snippet/: promises.js
_guides/images/: ruby_object_model.dot  ruby_object_model_singleton.dot
_guides/ruby_examples/: yarv_example1_ripper_output.rb
_guides/yoga_poses/: adho_mukha_svanasana.adoc  adho_mukha_vrksasana.adoc  ardha_chandrasana.adoc  chaturanga_dandasana.adoc  dandasana.adoc  halasana.adoc  janu_sirsasana.adoc  muktasana.adoc  padmasana.adoc  salamba_shirshasana.adoc  shirshasana.adoc  swastikasana.adoc  trikonasana.adoc  urdhva_dhanurasana.adoc  urdhva_mukha_svanasana.adoc  vajrasana.adoc  virabhadrasana1.adoc  virabhadrasana2.adoc  virabhadrasana3.adoc
_layouts/: page.html  post.html
_sass/: _base.scss
docs/: alpine.md  aws.md  elixir_webdev.adoc  index.md  nicola_blog.code-workspace  out.adoc  regex.adoc
docs/aws/: Aws-CDK.md  Aws-Cognito.md  Aws-ElasticSearch-OpenSearch.md  Aws-IAM.md  Aws-Organizations.md
docs/bash_examples/: function_local_vars.sh  function_local_vars_3.sh
docs/code_snippet/: promises2.js  promises_attach_handler_to_resolved_promise.js
docs/dev/: alpine.md  aws-all-to-be-split.md  aws.md  (+59 more)
scripts/src/: README.md  pyproject.toml
scripts/src/md_utils/: __init__.py  app.py  mv_file_and_images.py  sanity_check_internal_links_and_images.py
scripts/src/tests/: test_md_utils.py
scripts/src/tests/mocks/: document.md
(+86 files in other folders)
