[tool.poetry]
name = "mkdocs-tutorial"
version = "0.1.0"
description = ""
authors = ["Alex Fazio <alessandro.fazio@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.34"
jinja2 = "^3.1.4"
mkdocs-macros-plugin = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
move_and_update = "scripts.mv:main"  # Entry point for the command

[tool.poetry.dev-dependencies]
ad-docs = { path = "../ADDICTIVE/ad-internal-docs-cli" }
