[tool.poetry]
name = "google-docs-to-md-converter"  # Change this to match your directory name
version = "0.1.0"
description = "A tool to fix the code blocks in a markdown document exported from Google Docs"
authors = ["Nicola Brisotto <nicola@brisotto.me>"]
license = "Apache-2.0"  # Ensure this matches the LICENSE file

[tool.poetry.dependencies]
python = "^3.8"  # Specify your Python version

[tool.poetry.scripts]
gdoc2md = "google_docs_to_md_converter.docx2md:main"

[tool.poetry.group.dev.dependencies]
requests = "^2.25.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
